[gd_scene load_steps=4 format=2]

[ext_resource path="res://styleboxes/sb_default_textbox.tres" type="StyleBox" id=1]
[ext_resource path="res://fonts/determination_mono.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/ux_textbox_default.gd" type="Script" id=3]

[node name="Textbox" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TextboxContainer" type="Panel" parent="."]
margin_left = 324.887
margin_top = 378.117
margin_right = 994.887
margin_bottom = 578.117
rect_clip_content = true
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
margin_right = 670.0
margin_bottom = 252.0
rect_clip_content = true
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="HBoxContainer" parent="TextboxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 650.0
margin_bottom = 232.0
rect_clip_content = true

[node name="TextBlocks" type="VBoxContainer" parent="TextboxContainer/MarginContainer/Content"]
margin_right = 630.0
margin_bottom = 212.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/MarginContainer/Content/TextBlocks"]
margin_right = 630.0
margin_bottom = 212.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="TextboxContainer/MarginContainer/Content/TextBlocks/HBoxContainer"]
margin_right = 40.0
margin_bottom = 212.0
rect_min_size = Vector2( 40, 0 )
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
text = "*"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="TextboxContainer/MarginContainer/Content/TextBlocks/HBoxContainer"]
margin_left = 44.0
margin_right = 630.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog. Will I be stopped? Will I? Never."
autowrap = true

[node name="Tween" type="Tween" parent="."]

[node name="print" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -184.0
margin_right = 57.0
margin_bottom = -164.0
text = "print"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="show" type="Button" parent="."]
anchor_left = 0.448
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -149.773
margin_top = 175.518
margin_right = -171.333
margin_bottom = 123.518
text = "show"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="print" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="show" to="." method="show"]
